# bentopy

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  MANIFEST.in  README.md  build-wheels.sh  compile-release.sh  pack.py  pyproject.toml  release.sh  rustfmt.toml  upload.sh
inputs/: 3lyz.json  3lyz_concentration.json  3lyz_from_mask.json  compartment-combinations.json  input.json  input_200x200.json  input_3000x3000.json  input_400x400.json  input_400x400_smol_reso.json  input_8000x8000.json  input_800x800.json  input_placements.json  jvci.json  smol.json
src/: args.rs  cookies.rs  main.rs  placement.rs  solvate.rs  structure.rs  substitute.rs
src/bentopy/: __init__.py  bentopy.py
src/bentopy/check/: check.py
src/bentopy/grocat/: grocat.py
src/bentopy/mask/: config.py  mask.py
src/bentopy/pack/: config.py  mask.py  pack.py  segment.py  space.py
src/bentopy/render/: lib.rs
src/check/: check.py
src/core/: citation.rs  config.rs  mod.rs  placement.rs  utilities.rs  version.rs
src/core/config/: bent.rs  compartment_combinations.rs  legacy.rs
src/core/config/bent/: lexer.rs  parser.rs  writer.rs
src/extensions/: lib.rs  place.rs  render.rs  voxelize.rs
src/grocat/: grocat.py
src/init/: example.bent  main.rs
src/mask/: config.py  mask.py  utilities.py
src/merge/: merge.py
src/pack/: args.rs  config.rs  main.rs  mask.rs  placement.rs  rules.rs  session.rs  state.rs  structure.rs  voxelize.rs
src/pack/config/: compartment_combinations.rs
src/pack/state/: combinations.rs  compartment.rs  mask.rs  pack.rs  segment.rs  space.rs
src/render/: args.rs  limits.rs  main.rs  render.rs  structure.rs
src/solvate/: README.md  args.rs  convert.rs  cookies.rs  main.rs  placement.rs  solvate.rs  structure.rs  substitute.rs  topology.rs  water.rs
src/solvate/water/: martini.rs  models.rs  tip3p.rs
tutorial/: tutorial.md
