[package]
name = "hose"
version = "0.1.0"
edition = "2021"
authors = ["Marieke Westendorp <ma3ke.cyber@gmail.com>"]
repository = "https://git.sr.ht/~ma3ke/hose"
keywords = ["molecular-dynamics", "gromacs", "gro"]
license = "MIT"
categories = ["science"]
description = "Solvate molecules for simulations, quickly"

[dependencies]
arraystring = "0.3.0"
clap = { version = "4.5.1", features = ["derive"] }
eightyseven = "0.1.4"
glam = "0.25.0"
rand = "0.8.5"
rayon = "1.9.0"

[profile.release]
strip = true
lto = true
