[package]
name = "bentopy"
version = "1.0.0-beta.6"
edition = "2024"
authors = [
    "Marieke Westendorp <ma3ke.cyber@gmail.com>",
    "Jan Stevens <j.a.stevens@rug.nl>",
    "Bart Bruininks <bartbruininks@gmail.com>",
]
repository = "https://github.com/marrink-lab/bentopy"
rust-version = "1.88"

[[bin]]
name = "bentopy-init"
path = "src/init/main.rs"

[[bin]]
name = "bentopy-pack"
path = "src/pack/main.rs"

[[bin]]
name = "bentopy-render"
path = "src/render/main.rs"

[[bin]]
name = "bentopy-solvate"
path = "src/solvate/main.rs"

[dependencies]
glam = { version = "0.30.9", features = ["rand"] }
rand = "0.9.2"
clap = { version = "4.5.7", features = ["derive", "string"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
eightyseven = "0.1.5"
arraystring = "0.3.0"
npyz = { version = "0.8.3", features = ["npz"] }
rayon = "1.10.0"
anyhow = "1.0.97"
git-version = "0.3.9"
chumsky = { version = "0.11.2", features = ["pratt", "regex"] }
ariadne = "0.6.0"
