[build-system]
requires = ["setuptools>=61.0", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "bentopy"
version = "1.0.0b2"
authors = [
  { name="Marieke Westendorp", email="ma3ke.cyber@gmail.com" },
  { name="Jan Stevens", email="j.a.stevens@rug.nl" },
  { name="Bart Bruininks", email="bartbruininks@gmail.com" },
]
description = "Packs stuff in boxes"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.2.3",
    "scipy>=1.15",
    "freud-analysis>=3.2.0",
    "MDAnalysis>=2.8",
    "mdvcontainment>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/marrink-lab/bentopy"
Issues = "https://github.com/marrink-lab/bentopy/issues"

[project.scripts]
bentopy-check = "check:check.main"
bentopy-mask = "mask:mask.main"
bentopy-merge = "merge:merge.main"

[[tool.setuptools-rust.bins]]
target = "bentopy-init"

[[tool.setuptools-rust.bins]]
target = "bentopy-pack"

[[tool.setuptools-rust.bins]]
target = "bentopy-render"

[[tool.setuptools-rust.bins]]
target = "bentopy-solvate"
